--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,10 @@ dependencies = [
     "pydantic==2.11.3",
     "faiss-cpu==1.10.0",
     "httpx==0.28.1",
-    "langchain-community==0.3.21"
+    "langchain-community==0.3.21",
+    "pdfplumber==0.11.7",
+    "pdf2image (>=1.17.0,<2.0.0)",
+    "pytesseract (>=0.3.13,<0.4.0)"
 ]
 
 [project.optional-dependencies]
